GLab desc updated

--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -4,9 +4,10 @@
 
 <h2 class="card-title">GLab.</h2>
 <p class="card-text">
-  I'm a motivated front-end developer adept at creating responsive web and
-  hybrid mobile applications. Proficient in Ionic, Angular, TypeScript and
-  JavaScript. I develope new ideas as a hobby.
+  I am a highly motivated front-end developer with expertise in creating
+  responsive web and hybrid mobile applications. I am proficient in Ionic,
+  Angular, TypeScript, and JavaScript, and enjoy developing new ideas as a
+  passion project.
 </p>
 <div
   class="card-footer pt-2 mb-2"
