--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -14,7 +14,7 @@
   style="background: inherit; border-color: inherit"
 >
   <br />
-  <h2 class="card-title pb-2">My latest works:</h2>
+  <h2 class="card-title pb-2">My recent work:</h2>
 
   <!-- APP list -->
   <div
